@@ -1,6 +1,6 @@
 Package: MKmisc
 Version: 1.1
-Date: 2018-08-04
+Date: 2018-08-05
 Title: Miscellaneous Functions from M. Kohl
 Authors@R: person("Matthias", "Kohl", role = c("aut", "cre"),
                   email = "Matthias.Kohl@stamats.de", 
@@ -8,7 +8,7 @@ Authors@R: person("Matthias", "Kohl", role = c("aut", "cre"),
 Author: Matthias Kohl [aut, cre] (0000-0001-9514-8910)
 Maintainer: Matthias Kohl <Matthias.Kohl@stamats.de>
 Depends: R(>= 2.14.0)
-Imports: stats, graphics, grDevices, RColorBrewer, robustbase, ggplot2
+Imports: stats, graphics, grDevices, RColorBrewer, robustbase, ggplot2, scales
 Suggests: gplots, Amelia, knitr, rmarkdown, exactRankTests
 VignetteBuilder: knitr
 Description: Contains several functions for statistical data analysis; e.g. for sample size and power calculations, computation of confidence intervals, and generation of similarity matrices.
