@@ -3,6 +3,7 @@ importFrom("graphics", "layout", "image", "axis", "box", "par")
 importFrom("grDevices", "colorRampPalette")
 importFrom("robustbase", "covMcd", "covOGK")
 importFrom("RColorBrewer", "brewer.pal")
+importFrom("scales", "trans_new")
 export(simCorVars,
        glog,
        glog10,
@@ -10,6 +11,18 @@ export(simCorVars,
        inv.glog,
        inv.glog10,
        inv.glog2,
+       scale_y_glog,
+       scale_x_glog,
+       scale_y_glog10,
+       scale_x_glog10,
+       scale_y_glog2,
+       scale_x_glog2,
+       scale_y_neglog,
+       scale_x_neglog,
+       scale_y_neglog10,
+       scale_x_neglog10,
+       scale_y_neglog2,
+       scale_x_neglog2,
        melt.long,
        mi.t.test,
        ssize.pcc,
